[v 2.0.0] use command files

--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
   "prefix": "!",
-  "token": "NTY1Njk0NTYzNjA4NTU5NjQ5.XK6KpA.h82-c--aKiCYd8NbIqK8tLCN0SU",
-  "guild": "564171902269259776"
+  "token": "NTY1Njk0NTYzNjA4NTU5NjQ5.XK6KpA.h82-c--aKiCYd8NbIqK8tLCN0SU"
 }
