--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shiny-squad-discord-bot",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "",
   "scripts": {
     "start": "node index.js",
@@ -9,6 +9,10 @@
   "author": "RedSparr0w",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "sqlite": "^3.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
