--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint ./",
+    "test": "eslint ./"
   },
   "author": "RedSparr0w",
   "license": "ISC",
