--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "token": "NTY1Njk0NTYzNjA4NTU5NjQ5.XK6KpA.h82-c--aKiCYd8NbIqK8tLCN0SU",
   "leaderboard_channel_id": "601529257981902868",
   "leaderboard_message_id": "601552004648796180",
-  "champion_role_id": "602627929226346536"
+  "champion_role_id": "602627929226346536",
+  "backup_channel_id": "606321464433704960"
 }
