[v2.5.1] Apply shinySquad role every 6 hours

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "leaderboard_channel_id": "601529257981902868",
   "leaderboard_message_id": "601552004648796180",
   "champion_role_id": "602627929226346536",
-  "backup_channel_id": "606321464433704960"
+  "backup_channel_id": "606321464433704960",
+  "shiny_squad_role_id": "564241328154869761"
 }
